2004-09-25  ujwal
	
	* Fixed problem when PTYSession: -keyDown is never called when numeric or function 
	  keys were pressed. This messes up switching between application and numeric 
	  keypad modes. Now PTYTextView: -keyDown: invokes PTYSession: -keyDown: when 
	  numeric or function keys are pressed.	  
	* Fixed printing to NOT wrap text.	
	* Added support to launch command line tools from Finder.

2004-09-12  fabian
	
	* More fix for "Font Size Follows Window Resize" option. Largely works now,
	  but maximization still has weird behavior sometimes.
	  
2004-09-07  ujwal

	* setHidden method is invoked only if target view supports it (>= 10.3).
	* Added keybinding action for numeric enter key.

2004-09-02	fabian
	
	* Added "Maximize Vertically Only" option.
	* Added "Font Size Follows Window Resize" option (not working well yet)
	
2004-08-30	fabian
	
	* Removed unused [PseudoTerminal setCharWidth:(int)width height:(int)height];

2004-08-04  ujwal

	* Cmd-click on selection is activated only if mouseDown and mouseUp are 
	  in the same location.

2004-07-07  ujwal

	* Reimplemented print-to-ansi feature to use standard printing. Should 
	  also fix any encoding issues.

2004-07-05  ujwal

	* Added support to drag selection from iTerm window.
	* Added support to specify a bookmark as default.

2004-06-15  fabian

	* Fixed title problem in some web html files
	
2004-05-26  ujwal

	* Added an option to enable/disable Rendezvous.

2004-05-24  ujwal

	* Added support for services.

2004-05-19  ujwal

	* Made horizontal spacing parameter an "int" instead of a "float" since 
	  "float" was making the fonts look blurry. Spacing changes will be 
	  choppier, so we will need to revisit that.

2004-05-17  ujwal

	* Put back in fabian's fix for crash when closing window too fast. 
	  Object de-allocation does work correctly. It just happens when the 
	  next event is processed like a key or mouse event. However, it still 